[gd_scene load_steps=11 format=3 uid="uid://dt6h2vcvmvwmn"]

[ext_resource type="Script" uid="uid://boojbj7ydnfbe" path="res://scenes/statictile.gd" id="1_sf4dx"]
[ext_resource type="Texture2D" uid="uid://dsspq0ojnf6by" path="res://sprites/static.png" id="2_6enqy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bfwgt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6enqy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vljjh"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_cvxa1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ficha:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ytgif"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ficha:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ips3a"]
_data = {
&"RESET": SubResource("Animation_cvxa1"),
&"new_animation": SubResource("Animation_ytgif")
}

[sub_resource type="Animation" id="Animation_rhaxm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ips3a"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.8, 1.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhaxm"]
_data = {
&"RESET": SubResource("Animation_rhaxm"),
&"new_animation": SubResource("Animation_ips3a")
}

[node name="Static" type="Area2D"]
script = ExtResource("1_sf4dx")

[node name="ficha" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bfwgt")

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vljjh")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ips3a")
}

[node name="fusion_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rhaxm")
}
speed_scale = 10.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
